@@ -1,3 +1,5 @@
+2006/2/25 -- released version 20060225_trunk
+
 2006/2/24 -- released version 20060224_trunk
 
 2006/2/23 -- released version 20060223_trunk
